finish the work of sms_api

--- a/templates/welcome/welcome.html
+++ b/templates/welcome/welcome.html
@@ -16,8 +16,11 @@
     {% endif %}
 
     <div style="width: 400px;text-align: center;margin: 0 auto">
-        <h1>2016秋季招新</h1>
+        <h1>计算机协会技术部2016秋季招新</h1>
         <br>
         {% crispy form %}
     </div>
 {% endblock page %}
+
+{% block scripts %}
+{% endblock scripts %}
