--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="HUSTCA技术部招新入口">
     <meta name="author" content="Silhouette">
+    <meta name="theme-color" content="#eeeeee">
     <link rel="shortcut icon" href="{% static 'site/icon/favicon.jpg' %}">
 
     <title>{% block title %}计算机协会-技术部{% endblock title %}</title>
@@ -47,7 +48,7 @@
         <div class="footer">
             <div class="row">
                 <div class="col-lg-6">
-                    <p>&copy; HUSTCA {% now 'Y' %},HuaZhong University of Science and Technology | All rights reserved.</p>
+                    <p>&copy; HUSTCA {% now 'Y' %}, Huazhong University of Science and Technology. All rights reserved.</p>
                 </div>
                 <div class="col-lg-6 text-right">
                     与我们联系
