--- a/templates/welcome/welcome.html
+++ b/templates/welcome/welcome.html
@@ -15,8 +15,9 @@
         {% endfor %}
     {% endif %}
 
-    <div style="width: 400px;text-align: center;margin: 0 auto">
-        <h1>计算机协会技术部2016秋季招新</h1>
+    <div style="max-width: 400px;text-align: center;margin: 0 auto">
+        <h1>计算机协会技术部</h1>
+        <h1>2016秋季招新</h1>
         <br>
         {% crispy form %}
     </div>
